--- a/src/components/Typography/style.css
+++ b/src/components/Typography/style.css
@@ -1,30 +1,71 @@
-.h1__title {
-  font-family: "Karla", sans-serif;
-  font-weight: 600;
-  margin-bottom: 16px;
+.h1 {
   font-size: 22px;
-  margin-top: 12px;
-  letter-spacing: 1px;
 }
-.h2__subtitle {
-  font-family: "Karla", sans-serif;
+
+.h2 {
   font-size: 17px;
-  font-weight: 600;
-  letter-spacing: 1px;
 }
-.h3__textCard {
-  font-family: "Karla", sans-serif;
-  font-weight: 500;
+
+.h3 {
   font-size: 14px;
-  letter-spacing: 0.5px;
-  line-height: 23px;
 }
-.h4__subtitle {
-  font-family: "Karla", sans-serif;
-  font-weight: 500;
+
+.h4 {
   font-size: 13px;
 }
-.h5__subletitle__number {
-  font-family: "Karla", sans-serif;
+
+.h5 {
+  font-size: 28px;
+}
+
+.h6 {
+  font-size: 28px;
+}
+
+.subtitle1 {
+  font-size: 22px;
+}
+
+.subtitle2 {
+  font-size: 17px;
+}
+
+.subtitle3 {
+  font-size: 14px;
+}
+
+.subtitle4 {
+  font-size: 13px;
+}
+
+.subtitle5 {
+  font-size: 28px;
+}
+
+.subtitle6 {
+  font-size: 28px;
+}
+
+.body1 {
+  font-size: 22px;
+}
+
+.body2 {
+  font-size: 17px;
+}
+
+.body3 {
+  font-size: 14px;
+}
+
+.body4 {
+  font-size: 13px;
+}
+
+.body5 {
+  font-size: 28px;
+}
+
+.body6 {
   font-size: 28px;
 }
